feat: Add Cloudinary integration, image cropping, footer, and collapsible filters
- Integrate Cloudinary for production-ready profile photo uploads
- Add image crop/adjust feature with react-easy-crop for profile photos
- Create reusable Footer component with Quest Foundation and favqx links
- Implement collapsible advanced filters in Members Directory
- Update deployment documentation with Cloudinary setup instructions
- Add .env.example with Cloudinary configuration
- Preserve uploads directory structure with .gitkeep files

--- a/quest-foundation/.gitignore
+++ b/quest-foundation/.gitignore
@@ -35,3 +35,10 @@ next-env.d.ts
 
 # Prisma
 /prisma/migrations
+
+# Uploaded files (keep directory structure but ignore files)
+/public/uploads/*
+!/public/uploads/.gitkeep
+!/public/uploads/profile-photos/
+/public/uploads/profile-photos/*
+!/public/uploads/profile-photos/.gitkeep
