--- a/quest-foundation/package.json
+++ b/quest-foundation/package.json
@@ -32,6 +32,7 @@
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.51.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
@@ -52,7 +53,4 @@
     "tsx": "^4.7.1",
     "typescript": "^5.4.2"
   }
-
-  
 }
-
