--- a/quest-foundation/package.json
+++ b/quest-foundation/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.9.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "html-to-image": "^1.11.11",
